refactor(http-client): Restructure sources for multiplatform
Migrate the ktor client utilities to a Kotlin Multiplatform setup to
allow usage in both JVM and native contexts. This involves the following
changes:

Signed-off-by: Marcel Bochtler <marcel.bochtler@bosch.com>